<resources>
    <string name="app_name">Emergency Shaker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Emergency Shaker</string>
    <string name="slogan">Siap membantumu di saat-saat darurat.</string>
    <string name="nav_home">Home</string>
    <string name="Pengaturan">nav_pengaturan</string>
    <string name="nav_pengaturan">Pengaturan</string>
    <string name="Tentang">nav_tentang</string>
    <string name="nav_tentang">Tentang</string>
    <string name="nav_keluar">Keluar</string>
    <string name="add_kontak" />

    <string name="tentang"><b>Emergency Shaker</b> merupakan aplikasi yang dapat membantumu dalam kondisi darurat.
        <br /> Perlu bantuan polisi? Ambulans? Atau kerabat terdekat? <br /> <b>Emergency Shaker</b> akan membantumu menghubungi mereka dengan lebih cepat!
    </string>
    <string name="step1">1. Berikan izin untuk <b>Emergency Shaker</b> agar dapat mengakses lokasi serta melakukan panggilan telepon dari telepon genggam Anda.</string>
    <string name="step3">3. Masuk ke halaman <b>Pengaturan</b> untuk menambahkan kontak yang akan dihubungi saat Anda berada dalam keadaan darurat.</string>
    <string name="step2">2. Nyalakan <i>switch</i> pada halaman utama aplikasi untuk mengaktifkan fitur utama <b>Emergency Shaker</b>.</string>
    <string name="step4">4. Untuk jenis kontak Polisi, Ambulans, dan Pemadam Kebakaran, <b>Emergency Shaker</b> akan menghubungi pos terdekat secara otomatis. Untuk jenis kontak Lainnya, Anda dapat menambahkan opsi kirim SMS lokasi agar <b>Emergency Shaker</b> mengirimkan serta informasi lokasi Anda.</string>
    <string name="step5">5. Saat keadaan terasa darurat, Anda dapat melakukan <i>shake</i> pada telepon genggam Anda dan <b>Emergency Shaker</b> akan memberikan pemberitahuan bahwa kontak darurat akan segera dihubungi sesuai dengan jumlah <i>shake</i>-nya.</string>
    <string name="about_dev">Dikembangkan oleh tiga mahasiswa Ilmu Komputer Universitas Pendidikan Indonesia (UPI) Bandung, <b>Emergency Shaker</b> ditujukan untuk membantu masyarakat yang sedang kesulitan di saat-saat darurat.</string>
</resources>
