<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIActivity.HowToActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_how_to">
    </android.support.v7.widget.Toolbar>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_how_to">


        <LinearLayout
            android:id="@+id/section_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step1"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss1a"
                    android:paddingRight="10dp" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss1b"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss2a"
                    android:paddingRight="10dp"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss2b"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss3a"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/ss3b"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss4a"
                    android:paddingRight="20dp"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss4b"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ss5a" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ss5b"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>